# de-playground

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-audit.txt
.devcontainer/: devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
airflow/: Dockerfile  docker-compose.yml
api/: Dockerfile  __init__.py  main.py  pyproject.toml
compose/: core.yml  observability.yml  serving.yml  spark.yml
dags/: wwi_pipeline.py
docs/: ARCHITECTURE.md  BACKLOG.md  GLOSSARY.md  HANDOFF.md  OBSERVABILITY.md  PYTHON_HARDENING_PLAN.md  TROUBLESHOOTING.md  de_playground_system_design_azure.mermaid
jobs/: transform_cluster.py
kibana/: saved_objects.sh
observability/: alertmanager.yml  grafana-datasources.yaml  otel-collector-config.yaml  prometheus.yml  rules.yml
platform/: airflow-values.yaml  k3d-config.yaml
platform/airflow/: Dockerfile
platform/argocd/: api-application.yaml
platform/charts/api/: Chart.yaml  values.yaml
platform/charts/api/templates/: _helpers.tpl  deployment.yaml
platform/tofu/: .terraform.lock.hcl  airflow.tf  main.tf  outputs.tf  variables.tf  versions.tf
spark/: Dockerfile  metrics.properties
sql/: create_app_login.sh  create_app_login.sql  enable_cdc.sh  enable_cdc.sql  restore.sql  restore_databases.sh
src/de_playground/: __init__.py  config.py  contracts.py
src/de_playground/common/: __init__.py  lake.py  logging.py  retry.py  spark.py
src/de_playground/extract/: __init__.py  __main__.py  cdc.py  pipeline.py  source.py  tables.py  verify.py
src/de_playground/load/: __init__.py  to_elasticsearch.py
src/de_playground/transform/: __init__.py  __main__.py  gold.py  inspect_lake.py  pipeline.py  silver.py  silver_cdc.py
tests/: conftest.py  test_contracts.py  test_extract.py  test_lake.py  test_load.py  test_transforms_spark.py  test_verify.py
