[project]
name = "de-playground"
version = "0.1.0"
description = "Local data-engineering playground mirroring an Azure data stack (medallion ELT)."
readme = "README.md"
requires-python = ">=3.11"          # 3.9/3.10 are EOL or near it; 3.11+ is the modern floor
dependencies = [
    # ---- ingest phase (SQL Server -> Bronze) ----
    "dlt[sql_database,s3,parquet]>=1.0",  # ingestion: SQLAlchemy source, S3/fsspec sink, parquet
    "sqlalchemy>=2.0",              # engine behind dlt's sql_database source
    "pyodbc>=5.1",                  # SQL Server driver (needs unixODBC + msodbcsql18 on host)
    "pydantic-settings>=2.0",       # typed 12-factor config from env
    "boto3>=1.34",                  # S3 client — used to ensure the bronze bucket exists
    # ---- lake table format (no JVM needed for light reads/writes) ----
    "deltalake>=0.18",              # delta-rs: read/write Delta without Spark
    "pyarrow>=16.0",                # Parquet/Arrow backbone
    "psutil>=7.2.2",
    "operators>=1.0.1",
    "boto3-stubs~=1.43.0",
]

[project.optional-dependencies]
# Heavy/optional planes kept separate so `uv sync` stays light per phase.
process = [
    "pyspark==3.5.8",               # transforms Bronze->Silver->Gold (needs a JDK 17 on host)
    "delta-spark==3.2.1",           # Delta 3.2 pairs with Spark 3.5; pulls the matching jar
]
serve = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "elasticsearch>=8.14,<9",       # match the ES server major
]
eda = [
    "pandas>=2.2",                  # edges only: EDA samples + last-mile QA
    "polars>=1.0",                  # fast single-machine alternative
    "jupyterlab>=4.0",
]
dev = [
    "ruff>=0.5",                    # lint + format (replaces flake8/black/isort)
    "mypy>=1.10",                   # static type checking
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/de_playground"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]   # pycodestyle, pyflakes, isort, pyupgrade, bugbear

[tool.mypy]
python_version = "3.11"
# Pragmatic, not --strict: the PySpark / dlt / pyarrow ecosystem is largely untyped, so full
# strict mode mostly produces noise about third-party libs rather than real bugs. We still
# type-check our own defs and surface real issues.
ignore_missing_imports = true          # many DE libs ship without type stubs
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]
