[project]
name = "de-playground"
version = "0.1.0"
description = "Local data-engineering playground mirroring an Azure data stack (medallion ELT)."
readme = "README.md"
requires-python = ">=3.11"          # 3.9/3.10 are EOL or near it; 3.11+ is the modern floor
dependencies = [
    # ---- ingest phase (SQL Server -> Bronze) ----
    "dlt[sql_database,s3,parquet]>=1.0",  # ingestion: SQLAlchemy source, S3/fsspec sink, parquet
    "sqlalchemy>=2.0",              # engine behind dlt's sql_database source
    "pyodbc>=5.1",                  # SQL Server driver (needs unixODBC + msodbcsql18 on host)
    "pydantic>=2.0",                # contracts.py — typed cross-plane Pydantic models (WS4)
    "pydantic-settings>=2.0",       # typed 12-factor config from env
    "boto3>=1.34",                  # S3 client — used to ensure the bronze bucket exists
    # ---- lake table format (no JVM needed for light reads/writes) ----
    "deltalake>=0.18",              # delta-rs: read/write Delta without Spark
    "pyarrow>=16.0",                # Parquet/Arrow backbone
    "boto3-stubs~=1.43.0",          # typed S3 client (wired into common/lake.py in WS4)
]

[project.optional-dependencies]
# Heavy/optional planes kept separate so `uv sync` stays light per phase.
process = [
    "pyspark==3.5.8",               # transforms Bronze->Silver->Gold (needs a JDK 17 on host)
    "delta-spark==3.2.1",           # Delta 3.2 pairs with Spark 3.5; pulls the matching jar
]
eda = [
    "pandas>=2.2",                  # edges only: EDA samples + last-mile QA
    "polars>=1.0",                  # fast single-machine alternative
    "jupyterlab>=4.0",
]
dev = [
    "ruff>=0.5",                    # lint + format (replaces flake8/black/isort)
    "mypy>=1.10",                   # static type checking
    "pytest>=8.0",
    "import-linter>=2.0",           # architecture enforcement (layers/independence/forbidden)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/de_playground"]

# uv workspace (WS7): the root project (this file) is the core de_playground library; api/
# is a separate member with its own deps and Dockerfile. Single shared lockfile across
# members. jobs/ stays in the core library — it's a thin spark-submit driver whose only
# deps are de_playground itself, so a separate pyproject would be packaging ceremony.
[tool.uv.workspace]
members = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, flake8-bandit (security; WS8),
# tidy-imports + ruff-misc + simplify + pathlib + pytest + logging + return + comprehensions
# (WS2). Hard-wins on architecture (TID), readability (SIM/RET/C4), correctness (LOG/G),
# style (PT), and modernization (PTH).
select = [
  "E", "F", "I", "UP", "B", "S",
  "TID", "RUF", "SIM", "PTH", "PT", "LOG", "G", "RET", "C4",
]

[tool.ruff.lint.per-file-ignores]
# `assert` is idiomatic in pytest; flake8-bandit's S101 would flag every test.
"tests/**/*.py" = ["S101"]
# verify.py + inspect_lake.py format human-readable pretty-output lines as the log msg
# itself (the structured/JSON branch goes via `extra=`); G004 (f-string in log msg) is the
# explicit chosen idiom there, not a bug.
"src/de_playground/extract/verify.py" = ["G004"]
"src/de_playground/transform/inspect_lake.py" = ["G004"]

[tool.ruff.lint.flake8-tidy-imports]
# TID252: ban relative imports — WS2 converted all 38 sites to absolute. Layer enforcement
# (which package may import which) is import-linter's job (WS3), not ruff.
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.11"
# Pragmatic, not --strict: the PySpark / dlt / pyarrow ecosystem is largely untyped, so full
# strict mode mostly produces noise about third-party libs rather than real bugs. We still
# type-check our own defs and surface real issues.
ignore_missing_imports = true          # many DE libs ship without type stubs
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = false

[tool.pytest.ini_options]
testpaths = ["tests"]

# ---- Architecture enforcement (import-linter, WS3) -------------------------------------
# Three contracts that machine-check the layering in docs/PYTHON_HARDENING_PLAN.md
# "Target shape". Exhaustive ON: every new sub-package of de_playground must be placed in
# the layers list or the contract fails — catches architectural drift the moment it lands.
[tool.importlinter]
root_packages = ["de_playground"]

[[tool.importlinter.contracts]]
name = "Layered architecture (config < common < {extract|transform|load})"
type = "layers"
exhaustive = true
containers = ["de_playground"]
# Sibling layers separated by `|` are independent: cannot import each other.
# `contracts` (WS4 6a) sits at the base alongside `config`: it's a leaf-level Pydantic
# schema module that both producer (load) and serving (api) import.
layers = [
    "extract | transform | load",
    "common",
    "config | contracts",
]

[[tool.importlinter.contracts]]
name = "common forbidden from peer layers"
type = "forbidden"
source_modules = ["de_playground.common"]
forbidden_modules = [
    "de_playground.extract",
    "de_playground.transform",
    "de_playground.load",
]

[[tool.importlinter.contracts]]
name = "config + contracts forbidden from anything else in de_playground"
type = "forbidden"
source_modules = ["de_playground.config", "de_playground.contracts"]
forbidden_modules = [
    "de_playground.common",
    "de_playground.extract",
    "de_playground.transform",
    "de_playground.load",
]
