[project]
name = "de-playground"
version = "0.1.0"
description = "Local data-engineering playground mirroring an Azure data stack (medallion ELT)."
readme = "README.md"
requires-python = ">=3.11"          # 3.9/3.10 are EOL or near it; 3.11+ is the modern floor
dependencies = [
    # ---- ingest phase (SQL Server -> Bronze) ----
    "dlt[sql_database,s3,parquet]>=1.0",  # ingestion: SQLAlchemy source, S3/fsspec sink, parquet
    "sqlalchemy>=2.0",              # engine behind dlt's sql_database source
    "pyodbc>=5.1",                  # SQL Server driver (needs unixODBC + msodbcsql18 on host)
    "pydantic>=2.0",                # contracts.py — typed cross-plane Pydantic models (WS4)
    "pydantic-settings>=2.0",       # typed 12-factor config from env
    "boto3>=1.34",                  # S3 client — used to ensure the bronze bucket exists
    # ---- lake table format (no JVM needed for light reads/writes) ----
    "deltalake>=0.18",              # delta-rs: read/write Delta without Spark
    "pyarrow>=16.0",                # Parquet/Arrow backbone
    "boto3-stubs~=1.43.0",          # typed S3 client (wired into common/lake.py in WS4)
]

[project.optional-dependencies]
# Heavy/optional planes kept separate so `uv sync` stays light per phase.
process = [
    "pyspark==3.5.8",               # transforms Bronze->Silver->Gold (needs a JDK 17 on host)
    "delta-spark==3.2.1",           # Delta 3.2 pairs with Spark 3.5; pulls the matching jar
]
eda = [
    "pandas>=2.2",                  # edges only: EDA samples + last-mile QA
    "polars>=1.0",                  # fast single-machine alternative
    "jupyterlab>=4.0",
]
dev = [
    "ruff>=0.5",                    # lint + format (replaces flake8/black/isort)
    "mypy>=1.10",                   # static type checking (WS4: strict)
    "pyright>=1.1",                 # WS4 6c — second gate (standard mode); editor-strict
    "pytest>=8.0",
    "import-linter>=2.0",           # architecture enforcement (layers/independence/forbidden)
    "hypothesis>=6.0",              # property-based tests (WS5)
    "pytest-cov>=5.0",              # coverage measurement (WS5); diff-cover gate is WS6
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/de_playground"]

# uv workspace (WS7): the root project (this file) is the core de_playground library; api/
# is a separate member with its own deps and Dockerfile. Single shared lockfile across
# members. jobs/ stays in the core library — it's a thin spark-submit driver whose only
# deps are de_playground itself, so a separate pyproject would be packaging ceremony.
[tool.uv.workspace]
members = ["api"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, flake8-bandit (security; WS8),
# tidy-imports + ruff-misc + simplify + pathlib + pytest + logging + return + comprehensions
# (WS2). Hard-wins on architecture (TID), readability (SIM/RET/C4), correctness (LOG/G),
# style (PT), and modernization (PTH).
select = [
  "E", "F", "I", "UP", "B", "S",
  "TID", "RUF", "SIM", "PTH", "PT", "LOG", "G", "RET", "C4",
]

[tool.ruff.lint.per-file-ignores]
# `assert` is idiomatic in pytest; flake8-bandit's S101 would flag every test.
"tests/**/*.py" = ["S101"]
# verify.py + inspect_lake.py format human-readable pretty-output lines as the log msg
# itself (the structured/JSON branch goes via `extra=`); G004 (f-string in log msg) is the
# explicit chosen idiom there, not a bug.
"src/de_playground/extract/verify.py" = ["G004"]
"src/de_playground/transform/inspect_lake.py" = ["G004"]

[tool.ruff.lint.flake8-tidy-imports]
# TID252: ban relative imports — WS2 converted all 38 sites to absolute. Layer enforcement
# (which package may import which) is import-linter's job (WS3), not ruff.
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.11"
# WS4 6c: mypy --strict at the boundaries, scoped overrides for modules that touch the
# opaque PySpark / dlt / pyarrow surface (which is largely untyped, and strict-checking
# them produces noise about third-party libs rather than real bugs). Keep
# `ignore_missing_imports = true` so that untyped-library import doesn't trip strict mode.
strict = true
ignore_missing_imports = true

# Scoped relaxation for modules that work with untyped Spark / dlt / pyarrow / delta-rs /
# elasticsearch internals. They still get most of strict's gains
# (disallow_incomplete_defs, warn_unused_ignores) — we only relax the parts that would
# force noisy `Any` casts on every untyped-library call site. Strict still applies to:
# config.py, common/lake.py, common/logging.py, common/retry.py, contracts.py,
# extract/tables.py — the explicit-contract boundaries.
[[tool.mypy.overrides]]
module = [
    "de_playground.transform.*",
    "de_playground.extract.source",
    "de_playground.extract.cdc",
    "de_playground.extract.verify",
    "de_playground.load.to_elasticsearch",
]
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_decorated = false
disallow_any_unimported = false
disallow_any_generics = false
warn_return_any = false

[tool.pyright]
# Second gate, staged: standard mode in CI (catches what mypy strict catches +
# pyright-specific narrowing); editor-only `strict` mode is recommended for live feedback
# but not gated. Escalate CI to strict once the boundaries are typed and the residual
# delta over mypy is small. See docs/PYTHON_HARDENING_PLAN.md WS4 step 5.
include = ["src", "api"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
# Pyright bundles minimal type info for boto3-stubs at the `mypy_boto3_*` namespace
# (mypy-style stubs but not always pyright-friendly); accept the slack.
reportMissingImports = "warning"
# PySpark's classproperty descriptor (e.g. SparkSession.builder) confuses pyright stubs;
# downgrade these to warnings rather than gate on them.
reportAttributeAccessIssue = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
# WS5: gate any test that needs Spark/JVM behind the `pyspark` marker; default CI stays
# Java-free, an opt-in CI job (`pytest -m pyspark`) installs JDK 17 + runs them.
markers = [
    "pyspark: Spark-backed transform tests (needs JDK 17 + PySpark; opt-in)",
]
# Skip the pyspark marker by default; explicit -m pyspark in CI to run them.
addopts = "-m 'not pyspark'"

# WS6: coverage scope. Omit transform.* + extract.cdc from the default measurement —
# they're Spark/dlt-heavy and the default Java-free CI can't run their tests, so leaving
# them in would drag the total coverage number into nonsense. They're measured separately
# in the opt-in `pyspark` job. diff-cover's --fail-under = 80% on changed lines (not total).
[tool.coverage.run]
source = ["de_playground"]
omit = [
    "src/de_playground/transform/*",
    "src/de_playground/extract/cdc.py",
    "src/de_playground/extract/source.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false

# ---- Architecture enforcement (import-linter, WS3) -------------------------------------
# Three contracts that machine-check the layering in docs/PYTHON_HARDENING_PLAN.md
# "Target shape". Exhaustive ON: every new sub-package of de_playground must be placed in
# the layers list or the contract fails — catches architectural drift the moment it lands.
[tool.importlinter]
root_packages = ["de_playground"]

[[tool.importlinter.contracts]]
name = "Layered architecture (config < common < {extract|transform|load})"
type = "layers"
exhaustive = true
containers = ["de_playground"]
# Sibling layers separated by `|` are independent: cannot import each other.
# `contracts` (WS4 6a) sits at the base alongside `config`: it's a leaf-level Pydantic
# schema module that both producer (load) and serving (api) import.
layers = [
    "extract | transform | load",
    "common",
    "config | contracts",
]

[[tool.importlinter.contracts]]
name = "common forbidden from peer layers"
type = "forbidden"
source_modules = ["de_playground.common"]
forbidden_modules = [
    "de_playground.extract",
    "de_playground.transform",
    "de_playground.load",
]

[[tool.importlinter.contracts]]
name = "config + contracts forbidden from anything else in de_playground"
type = "forbidden"
source_modules = ["de_playground.config", "de_playground.contracts"]
forbidden_modules = [
    "de_playground.common",
    "de_playground.extract",
    "de_playground.transform",
    "de_playground.load",
]
