# The FastAPI serving deployable — a workspace member of de-playground (uv workspace at the
# repo root). Deliberately has NO dependency on the de_playground core library: the serving
# plane talks to Elasticsearch via HTTP, never imports the pipeline. This isolation is the
# same one import-linter's forbidden contract would enforce if api/ ever grew a package.
# See docs/PYTHON_HARDENING_PLAN.md WS7 + ARCHITECTURE.md "three planes".
[project]
name = "de-playground-api"
version = "0.1.0"
description = "Serving-plane FastAPI over the derived Elasticsearch fact_sales index."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "elasticsearch>=8.14,<9",  # match the ES server major
    # OpenTelemetry: auto-instruments FastAPI/uvicorn (traces+metrics+logs). Falls back to
    # logging warnings if no collector is running; serves requests either way.
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# api/ is a single-module script (main.py) rather than a package, so build it as one.
packages = []
include = ["main.py"]
