# The FastAPI serving deployable — a workspace member of de-playground (uv workspace at the
# repo root). The serving plane talks to Elasticsearch via HTTP and never imports pipeline
# RUNTIME modules; the one exception (WS4) is `de_playground.contracts`, the typed Pydantic
# schema producer + serving share — the cross-plane contract lives in one place rather than
# being implicitly redeclared on both sides (kills hardening-plan Finding 9). See
# docs/PYTHON_HARDENING_PLAN.md WS4 + WS7.
[project]
name = "de-playground-api"
version = "0.1.0"
description = "Serving-plane FastAPI over the derived Elasticsearch fact_sales index."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "elasticsearch>=8.14,<9",  # match the ES server major
    # OpenTelemetry: auto-instruments FastAPI/uvicorn (traces+metrics+logs). Falls back to
    # logging warnings if no collector is running; serves requests either way.
    "opentelemetry-distro",
    "opentelemetry-exporter-otlp",
    # Shared cross-plane contracts (the FactSalesDoc / SalesSearchResult Pydantic models).
    # Workspace dep — resolves to the local source via the root uv.lock.
    "de-playground",
]

[tool.uv.sources]
de-playground = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# api/ ships as a package (api/__init__.py + api/main.py) — same as how import-linter,
# mypy, and pyright see it in the source tree. force-include maps the in-source files
# from this directory (api/) to `api/` inside the wheel, so a future cross-module import
# from `api.<X>` works at runtime too. (Previously the wheel shipped only main.py at the
# site-packages root, which the deployable never actually used — the Dockerfile copied
# main.py directly into WORKDIR; the divergence between the wheel and the source-tree
# package marker was harmless but easy to misread.)
[tool.hatch.build.targets.wheel.force-include]
"__init__.py" = "api/__init__.py"
"main.py" = "api/main.py"
